# sec_filings

./: .flake8  .gitignore  README.md  potato.py  pyproject.toml  requirements.txt  sec.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
src/sec_filings/: __init__.py  __main__.py  cli.py  config.py  downloader.py  parser.py
tests/: __init__.py
