[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-filings-pipeline"
version = "0.1.0"
description = "Download SEC 10-K filings and convert them to Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SEC Filings Pipeline Maintainers" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "html2text>=2024.2.26",
    "lxml>=5.0",
    "pandas>=2.0",
    "requests>=2.31",
    "sec2md>=0.1.23",
    "sec-edgar-downloader>=5.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
sec-filings = "sec_filings.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
